Deployment/kubernetes/eks/development/backend/authenticator.yaml

apiVersion: v1
kind: Service
metadata:
  name: authenticator
  namespace: development
  labels:
    app: authenticator
spec:
  type: NodePort
  ports:
  - port: 80    
  selector:
   app: authenticator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticator
  namespace: development
spec:
  selector:
    matchLabels:
      app: authenticator
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: authenticator
    spec:
      containers:
      - name: authenticator
        image: pigeatgarlic/authenticator:development
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "300m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      nodeSelector:
        topology.kubernetes.io/zone: ap-southeast-1a
