Deployment/kubernetes/eks/development/backend/autoscaling.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoscaling
  namespace: development
  labels:
    app: autoscaling
spec:
  type: NodePort
  ports:
  - port: 80    
  selector:
   app: autoscaling
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaling
  namespace: development
spec:
  selector:
    matchLabels:
      app: autoscaling
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: autoscaling
    spec:
      containers:
      - name: autoscaling
        image: pigeatgarlic/autoscaling:development
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "300m"
          limits:
            memory: "700Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

        volumeMounts:
        - name: aws 
          readOnly: true
          mountPath: "/etc/.aws"

      volumes:
      - name: aws
        secret: 
          secretName: aws-cred
          defaultMode: 256
