Deployment/kubernetes/eks/development/backend/conductor.yaml
apiVersion: v1
kind: Service
metadata:
  name: conductor
  namespace: development
  labels:
    app: conductor
spec:
  type: NodePort
  ports:
  - port: 80    
  selector:
   app: conductor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conductor
  namespace: development
spec:
  selector:
    matchLabels:
      app: conductor
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: conductor
    spec:
      containers:
      - name: conductor
        image: pigeatgarlic/conductor:development
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "300m"
          limits:
            memory: "700Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
