Deployment/kubernetes/eks/development/backend/signalling.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalling
  namespace: development
  labels:
    app: signalling
spec:
  type: NodePort
  ports:
   - port: 80
  selector:
   app: signalling
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalling
  namespace: development
spec:
  selector:
    matchLabels:
      app: signalling
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: signalling
    spec:
      containers:
      - name: signalling
        image: pigeatgarlic/signalling:development
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "300m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      nodeSelector:
        node.kubernetes.io/instance-type: t3a.small
