Deployment/kubernetes/eks/development/backend/systemhub.yaml
apiVersion: v1
kind: Service
metadata:
  name: systemhub
  namespace: development
  labels:
    app: systemhub
spec:
  type: NodePort
  ports:
  - port: 80    
  selector:
   app: systemhub
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: systemhub
  namespace: backend
spec:
  serviceName: systemhub
  replicas: 1
  selector:
    matchLabels:
      app: systemhub
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: systemhub
    spec:
      containers:
      - name: systemhub
        image: pigeatgarlic/systemhub:development
        imagePullPolicy: Always
        resources:
          requests:
            memory: "400Mi"
            cpu: "400m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      nodeSelector:
        topology.kubernetes.io/zone: ap-southeast-1a
